--- a/pages/season-1-heist/heist.html
+++ b/pages/season-1-heist/heist.html
@@ -9,7 +9,23 @@
 </head>
 <body>
     <div class="s-wrapper">
-        
+        <div class="s-left-column">            
+            <nav class="navigator">
+                <div class="navigator__icon">
+                    <a href="../../index.html">
+                        <img src="../../assets/images/icons-patentes/icon-patente-mj/lendario-cod-mobile-mj.png" />
+                    </a>
+                </div>
+                <ul>
+                    <li><a href="#01">01</a></li>
+                    <li><a href="#01">02</a></li>
+                    <li><a href="#01">03</a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="s-main-content">
+
+        </div>
     </div>
 </body>
 </html>
