Add imagens e css page Heist

--- a/pages/season-1-heist/heist.html
+++ b/pages/season-1-heist/heist.html
@@ -24,7 +24,25 @@
             </nav>
         </div>
         <div class="s-main-content">
+            <div class="s-main-content__top">
+                <div class="s-logo">
+                    <img src="../../assets/images/logo/titulo-heist-season-1.png" alt="Call of Duty Heist Season 1" 
+                    title="Call Of Duty Heist Season 1" />
+                </div>
 
+                <div class="s-description">
+                    <div class="pills">
+                        <ul>
+                            <li>Ano: 2022</li>
+                            <li>Season: 1</li>
+                        </ul>
+                    </div>
+                </div>
+                
+            </div>
+            <div class="s-main-content__bottom">
+
+            </div>
         </div>
     </div>
 </body>
