Adicionando CSS: descrição e botão de play da página Heist

--- a/pages/season-1-heist/heist.html
+++ b/pages/season-1-heist/heist.html
@@ -37,9 +37,28 @@
                             <li>Season: 1</li>
                         </ul>
                     </div>
-                </div>
+                    
+                    <div class="s-description__text">
+                        <p><strong>Temporada:</strong>&nbsp; Invada a Hacienda, proteja as informações e escape sem ser detectado na 1ª temporada: Heist! Este novo arco de história vê Makarov à frente de um grande sindicato do crime, e a temporada apresenta um novo Passe de Batalha, eventos do Ano Novo Lunar e uma nova versão com tema semelhante de Nuketown, conteúdo extra de Battle Royale e muito mais.</p>
+                    </div>
+                </div>  
                 
+                <div class="s-links">
+                    <ul>
+                        <li>
+                            <a href="https://www.youtube.com/watch?v=uYzHJXhSSnw" class="link-button" target="_blank">
+                                <span class="icon">
+                                    <div class="play-icon">&nbsp;</div>
+                                </span>
+                                <span class="label">
+                                    Assistir: Anunciando a 1ª temporada
+                                </span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>                
             </div>
+
             <div class="s-main-content__bottom">
 
             </div>
